[package]
name = "toytcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27"
#エラー処理
anyhow = '1.0'
#乱数
rand = '0.8'

[dev-dependencies]
#ctr+cによるシグナルをハンドリング
ctrlc = '3.1'

[[bin]]
name = "echoclient"
path = "examples/echoclient.rs"
